--- a/index.html
+++ b/index.html
@@ -43,10 +43,6 @@
           alt="Icone do tecnologia Tailwind"
         />
         <img src="assets/skill/nodejs.png" alt="Icone do tecnologia Nodejs" />
-        <img
-          src="assets/skill/firebase.png"
-          alt="Icone do tecnologia Firebase"
-        />
       </div>
 
       <div id="switch" onclick="toggleMode()">
@@ -128,7 +124,7 @@
         </a>
       </div> -->
 
-      <footer>Feito com ♥ por Paulo Araújo Dev.</footer>
+      <footer>Feito por Paulo Araújo Dev.</footer>
     </div>
 
     <script
