style: Formatação dos links

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                 style="padding-right: 10px; font-size: 30px"
                 name="logo-youtube"
               ></ion-icon
-              >Youtube (em construção)</a
+              >Youtube</a
             >
           </div>
         </li>
@@ -100,7 +100,7 @@
                 style="padding-right: 10px; font-size: 30px"
                 name="logo-tiktok"
               ></ion-icon
-              >TikTok (em construção)</a
+              >TikTok</a
             >
           </div>
         </li>
